--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cms-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://swethaprakashp.github.io/cms-frontend",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -25,7 +26,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://swethaprakashp.github.io/cms-frontend/",
   "eslintConfig": {
     "extends": [
       "react-app",
