--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cms-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://swethaprakashp.github.io/cms-frontend",
+  "homepage": "https://swethaprakashp.github.io/cms-frontend/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
